# windows_cpp_template

./: CMakeLists.txt  CMakePresets.json  README.md  common_includes.h  cpp_playground.cpp  cpp_playground.h  linux_platform.cpp  linux_platform.h  main.cpp  spladi.cpp  spladi.h  spladi_platform.cpp  spladi_platform.h  win32_platform.cpp  win32_platform.h
